<resources>
    <string name="app_name">CandaanKu</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9783650227413863/4220455433</string>

    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>

    <string name="facebook_app_id">1764025210583772</string>
    <!--<string name="facebook_app_id">775105872596406</string>-->
    <string name="twitter_api_key">jkQcMDXi4afbv0JyY3k4R6e4b</string>
    <string name="twitter_secret_key">9PjFH9KK9XQ3T0Xg7D4cSlEG73dTo9UHJXyEl5qbNCbrpxrpyB</string>

    <!--<string name="instagram_client_id">31f676aa63b6487ebc7ab035ab9ca0c9</string>-->
    <!--<string name="instagram_callback_url">http://www.google.co.in</string>-->
    <!--<string name="instagram_client_secret">83af30b57cdc4793ae01f225b24b31ed</string>-->

    <!--<string name="bt_google">Google+</string>-->
    <!--<string name="bt_google_logout">Google+ logout</string>-->

    <string name="menu_settings">Settings</string>
    <string name="title_activities">Candaanku</string>
    <string name="goback">Kembali</string>

    <!-- Splash Page Values -->
    <string name="splash_text">This application was designed by
        Natacha Gabbamonte and Caroline Castonguay-Boisvert</string>
    <string name="splash_image_desc">Garfield laughing at Odie</string>
    <string name="splash_button">Skip</string>

    <!-- Main Page Buttons text -->
    <string name="main_jokeMe">Joke Me</string>
    <string name="main_setCategory">Pilih Kategori</string>
    <string name="main_addJokes">Tambah Cerita</string>
    <string name="main_addCats">Tambah Kategori</string>
    <string name="main_quit">Tutup</string>

    <!-- Show Joke page text -->
    <string name="showjoke_showanswer">Jawaban</string>
    <string name="showjoke_nextjoke">Berikut</string>
    <string name="showjoke_deletejoke">Hapus Cerita</string>
    <string name="showjoke_categoryempty">Tidak ada kategori yang berisi cerita!</string>
    <string name="showjoke_retrievingerror">Terjadi kesalahan ketika mengambil cerita.</string>
    <string name="showjoke_nocategory">Tidak ada kategori yang dipilih!</string>
    <string name="showjoke_emptiedcategories">Tidak ada cerita lagi dalam kategori yang dipilih!</string>
    <string name="showjoke_deleted">Dihapus!</string>
    <string name="showjoke_deletionerror">Terjadi kesalahan sewaktu menghapus.</string>
    <string name="showjoke_changecat">Ubah Kategori</string>
    <string name="showjoke_OK">OK</string>
    <string name="showjoke_setcat_notchanged">Tidak ada kategori yang dipilih! Kategori tidak berubah.</string>
    <string name="showjoke_setcat_nojokes">Tidak ada cerita dalam kategori yang dipilih! Kategori tidak berubah.</string>
    <string name="showjoke_setcat_title">Pilih Kategori</string>

    <!-- Set default category page texts -->
    <string name="setcat_message">Pilih kategori cerita yang anda inginkan:</string>
    <string name="setcat_save">Simpan perubahan</string>
    <string name="setcat_deletecat">Hapus Kategori</string>
    <string name="setcat_deleted_plural">kategori dihapus!</string>
    <string name="setcat_deleted_singular">1 kategori dihapus!</string>
    <string name="setcat_nocat">Tidak ada kategori! Anda bisa menambahkannya pada menu "Tambah kategori".</string>
    <string name="setcat_errordeleting">Terjadi kesalahan sewaktu menghapus.</string>
    <string name="setcat_confirm_message">Apakah anda yakin ingin menghapus kategori tersebut?</string>
    <string name="setcat_confirm_title">Konfirmasi</string>
    <string name="setcat_no">Tidak</string>
    <string name="setcat_yes">Ya</string>
    <string name="setcat_notdeleted">Tidak ada kategori yang dihapus.</string>
    <string name="setcat_cancel">Tunda</string>

    <!-- Add joke texts -->
    <string name="addjoke_add">Tambah Cerita</string>
    <string name="addjoke_message">Judul dan isi cerita:</string>
    <string name="addjoke_joke">Judul:</string>
    <string name="addjoke_ans">Isi:  </string>
    <string name="addtekateki_joke">Soal:</string>
    <string name="addtekateki_ans">Jawaban:</string>
    <string name="addjoke_cat">Pilih kategori:</string>
    <string name="addjoke_nocat">Tidak ada kategori untuk menambahkan cerita! Anda bisa menambahkan dengan memilih menu "Tambah Kategori".</string>
    <string name="addjoke_nojoke">Anda tidak memasukkan judul cerita!</string>
    <string name="addjoke_noanswer">Anda tidak memasukkan isi cerita!</string>
    <string name="addtekateki_nojoke">Anda tidak memasukkan soal teka-teki!</string>
    <string name="addtekateki_noanswer">Anda tidak memasukkan jawaban teka-teki!</string>
    <string name="addjoke_added">Ditambahkan!</string>
    <string name="addjoke_google">Google Search</string>

    <!-- Add category texts -->
    <string name="addcat_add">Tambah</string>
    <string name="addcat_message">Input kategori dibawah ini. Nama kategori harus unik.</string>
    <string name="addcat_cat">Kategory:</string>
    <string name="addcat_emptycat">Masukkan nama kategori!</string>
    <string name="addcat_alreadyexists">Kategori sudah ada!</string>
    <string name="addcat_error">Terjadi kesalahan sewaktu menambahkan kategori ke database!</string>
    <string name="added">Ditambahkan!</string>

    <!-- Google search texts -->
    <string name="addjoke_googleURL">http://google.ca/#hl=en&amp;q=jokes+</string>
    <string name="addjoke_title">Pilih kategori untuk pencarian Google:</string>
    <string name="addjoke_cancel">Tunda</string>

    <string name="create_account">Daftar</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="signed_out">Signed out</string>
    <string name="emailpassword_title_text">Email Password Title</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="label_emailpassword">Email Password</string>
    <string name="enter_user_name">Enter User</string>
    <string name="update_user">Update User</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>
</resources>
