<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/mainBackground"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:background="@color/mainBackground"
                android:padding="@dimen/padding_small"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/textTitleSize" />



            <TextView
                android:id="@+id/textViewAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/mainBackground"
                android:layout_margin="@dimen/padding_small"
                android:padding="@dimen/padding_small"
                android:textColor="@color/buttonBackground"
                android:textSize="@dimen/textSize" />

            <Button
                android:id="@+id/buttonNextJoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:background="@color/colorPrimary"
                android:text="@string/showjoke_nextjoke"
                android:textColor="@color/buttonText"
                android:width="@dimen/main_buttonWidth" />

            <Button
                android:id="@+id/buttonAddJoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:background="@color/colorPrimary"
                android:text="@string/main_addJokes"
                android:textColor="@color/buttonText"
                android:width="@dimen/main_buttonWidth" />

            <Button
                android:id="@+id/buttonDeleteJoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:background="@color/colorPrimary"
                android:text="@string/showjoke_deletejoke"
                android:textColor="@color/buttonText"
                android:width="@dimen/main_buttonWidth" />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="@dimen/padding_large"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>