<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myproject.firebase.ahmad.candaanku.com.myproject.firebase.ahmad.candaanku.fragment.ThreeFragment">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">



            <EditText
                android:id="@+id/edit_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">



            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>


        <!--<Button-->
            <!--android:id="@+id/g_login_btn"-->
            <!--style="@style/GoogleSignInButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@android:color/white"-->
            <!--android:clickable="false"-->
            <!--android:text="Google In"-->
            <!--android:textColor="@android:color/black"/>-->

         <!--<Button-->
            <!--android:id="@+id/g_plus_login_btn"-->
            <!--style="@style/GoogleSignInButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:clickable="false"-->
            <!--android:text="@string/bt_google"/>-->

        <!--<Button-->
            <!--android:id="@+id/bt_act_login_fb"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="@drawable/corner_fb"-->
            <!--android:text="Facebook"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@android:color/white"/>-->

        <!--<Button-->
            <!--android:id="@+id/twitter_login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="@color/twitter_color"-->
            <!--android:text="Login with Twitter"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@android:color/white"/>-->

        <!--<Button-->
            <!--android:id="@+id/linkedin_login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="@color/linkedin_color"-->
            <!--android:text="Login with LinkedIn"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@android:color/white"/>-->

        <!--&lt;!&ndash;never change id of this button&ndash;&gt;-->


        <!--<Button-->
            <!--android:id="@+id/instagram_login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="#125688"-->
            <!--android:text="Login with instagram"-->
            <!--android:textAllCaps="true"-->
            <!--android:textColor="@android:color/white"/>-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/padding_small"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/g_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="#125688"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/bt_act_login_fb"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="#125688"
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="Facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/twitter_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/layers_twitter_button_bg"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:text="Masuk dengan Twitter"
            />

        <!--<com.twitter.sdk.android.core.identity.TwitterLoginButton-->
            <!--android:id="@+id/twitter_login_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/padding_small"-->
            <!--android:background="#125688"-->
            <!--android:text="Twitter"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@android:color/white"/>-->

    </LinearLayout>
</ScrollView>

